--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "edition": "octane"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bulma": "^0.9.2",
     "ember-truth-helpers": "^3.0.0",
     "mock-http": "^1.1.0"
